@@ -44,14 +44,14 @@ class TestGPass50(unittest.TestCase):
             return None
 
     def test_num_entries(self):
-        self.assertEqual(len(self.passfile.records), 2)
+        self.assertEqual(len(self.passfile.records), 3)
 
     def test_entry_1(self):
 
         entry_name = "entry2"
         uuid = self._find_uuid(entry_name)
 
-        self.assertFalse(2 in self.passfile.records[uuid])
+        self.assertEqual(self.passfile.records[uuid][2], 'folder2')
         self.assertEqual(self.passfile.records[uuid][3], entry_name)
         self.assertEqual(self.passfile.records[uuid][4], 'username2')
         self.assertEqual(self.passfile.records[uuid][5],
@@ -61,12 +61,14 @@ class TestGPass50(unittest.TestCase):
         self.assertEqual(self._get_time(uuid, 8), 'Mon, 27 Jan 2014 01:16:44')
         self.assertEqual(self._get_time(uuid, 12), 'Mon, 27 Jan 2014 01:16:44')
         self.assertEqual(self.passfile.records[uuid][13], 'hostname2')
+        self.assertFalse(99 in self.passfile.records[uuid])
 
     def test_entry_2(self):
 
         entry_name = "topentry1"
         uuid = self._find_uuid(entry_name)
 
+        self.assertFalse(2 in self.passfile.records[uuid])
         self.assertEqual(self.passfile.records[uuid][3], entry_name)
         self.assertEqual(self.passfile.records[uuid][4], 'username1')
         self.assertEqual(self.passfile.records[uuid][5],
@@ -76,6 +78,33 @@ class TestGPass50(unittest.TestCase):
         self.assertEqual(self._get_time(uuid, 8), 'Mon, 27 Jan 2014 01:15:54')
         self.assertEqual(self._get_time(uuid, 12), 'Mon, 27 Jan 2014 01:15:54')
         self.assertEqual(self.passfile.records[uuid][13], 'hostname1')
+        self.assertFalse(99 in self.passfile.records[uuid])
+
+    def test_entry_3(self):
+
+        entry_name = "infolder4"
+        uuid = self._find_uuid(entry_name)
+
+        self.assertEqual(self.passfile.records[uuid][2], 'folder3.folder4')
+        self.assertEqual(self.passfile.records[uuid][3], entry_name)
+        self.assertEqual(self.passfile.records[uuid][4], 'username4')
+        self.assertFalse(5 in self.passfile.records[uuid])
+        self.assertEqual(self.passfile.records[uuid][6], 'password4')
+        self.assertEqual(self._get_time(uuid, 7), 'Fri, 14 Feb 2014 03:53:29')
+        self.assertEqual(self._get_time(uuid, 8), 'Fri, 14 Feb 2014 03:53:58')
+        self.assertEqual(self._get_time(uuid, 12), 'Fri, 14 Feb 2014 03:53:58')
+        self.assertFalse(13 in self.passfile.records[uuid])
+        self.assertFalse(99 in self.passfile.records[uuid])
+
+    def test_empty_folders(self):
+
+        empty_fields = [ 'folder3',
+                         'folder3.folder5',
+                         'emptyfolder1',
+                         'emptyfolder1.emptyfolder2' ]
+
+        self.assertEqual(len(self.passfile.empty_folders), len(empty_fields))
+        self.assertEqual(self.passfile.empty_folders.sort(), empty_fields.sort())
 
 
 if __name__ == '__main__':
